--- a/app/src/main/res/layout/fragment_current_day.xml
+++ b/app/src/main/res/layout/fragment_current_day.xml
@@ -10,6 +10,48 @@
     tools:context=".FragmentCurrentDay">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id = "@+id/cur_day_layout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/cur_btn_day"
+            style="@style/CustomRoundButton"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_marginTop="70dp"
+            android:background="@drawable/rounded_day"
+            android:fontFamily="@font/my_written"
+            android:gravity="center"
+            android:paddingEnd="0dp"
+            android:stateListAnimator="@null"
+            android:letterSpacing="0.1"
+            android:text="11"
+            android:textSize="100dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
+
+        <TextView
+            android:id="@+id/cur_day_answer_txt"
+            style="@style/CustomTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/my_written"
+            android:gravity="center"
+            android:text="@string/cur_day_question"
+            android:textSize="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cur_btn_day" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/popup_constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,38 +78,6 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/cur_btn_day"
-        style="@style/CustomRoundButton"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="70dp"
-        android:background="@drawable/rounded_day"
-        android:fontFamily="@font/my_written"
-        android:gravity="center"
-        android:paddingEnd="0dp"
-        android:stateListAnimator="@null"
-        android:text="11"
-        android:textSize="100dp"
-        android:translationZ="1dp" />
-
-        <TextView
-            android:id="@+id/cur_day_answer_txt"
-            style="@style/CustomTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/my_written"
-            android:text="@string/cur_day_question"
-            android:textSize="32dp"
-            android:gravity="center"
-            android:layout_centerHorizontal="true"
-            android:layout_below="@id/cur_btn_day"
-            android:layout_marginLeft="40dp"
-            />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -78,7 +88,7 @@
         android:layout_marginLeft="70dp"
         android:layout_marginTop="60dp"
         android:layout_marginRight="70dp"
-        android:layout_below ="@id/cur_day_answer_txt">
+        android:layout_below ="@id/cur_day_layout">
 
 
 
@@ -259,7 +269,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/progress_layout"
-        style = "@style/CustomProgressBarLayout"
+        style="@style/CustomProgressBarLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:visibility="gone">
@@ -282,8 +292,9 @@
         android:id="@+id/cur_back_to_cal"
         android:layout_width="48dp"
         android:layout_height="48dp"
+        android:background="@color/transparent"
         android:src="@drawable/ic_back"
-        android:background="@color/transparent"/>
+        android:visibility="gone"/>
 
 
 </RelativeLayout>
