--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,9 +47,10 @@
         <item name = "android:backgroundTint">@null</item>
     </style>
 
-    <style name="CustomBorderedButton">
+    <style name="CustomBorderedButton" parent = "@style/Widget.AppCompat.Button">
         <item name="android:background">@drawable/btn_stroke</item>
         <item name="android:textColor">@color/black</item>
+        <item name = "android:padding">10dp</item>
     </style>
 
     <style name="CustomEditText">
